fix: host qrcode.min.js locally (no more CDN MIME issues); add Supabase env vars to Vercel

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -2250,7 +2250,7 @@
     </div>
 
     <!-- QR library -->
-    <script src="https://unpkg.com/qrcode@1.5.3/build/qrcode.min.js"></script>
+    <script src="/assets/js/vendor/qrcode.min.js"></script>
     <script>
         // ── QR Modal (for org partner cards in promotions.html) ──────────────────
         let qrCardPromoId = null;
