fix: index.html redirect to /public/promotions.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Redirect immediato a promotions.html — index.html è la vecchia homepage -->
+    <script>window.location.replace('/public/promotions.html');</script>
     <meta name="description" content="La Piattaforma del Risparmio - Registrati e scopri come accedere ad un Mondo di sconti e servizi a te dedicati">
     <meta name="theme-color" content="#2563eb">
     <meta name="mobile-web-app-capable" content="yes">
