fix: openQRModal checks login before opening - show login modal if not logged in

--- a/public/promotions.html
+++ b/public/promotions.html
@@ -2260,6 +2260,13 @@
 
         function openQRModal(promoId, promoTitle, event) {
             if (event) event.preventDefault();
+
+            // Se non loggato → mostra modal login, non aprire QR
+            if (!currentUser) {
+                showLoginRequiredModal();
+                return;
+            }
+
             qrCardPromoId = promoId;
             qrCardPromoTitle = promoTitle;
 
