--- a/public/landing-builder.html
+++ b/public/landing-builder.html
@@ -342,7 +342,7 @@ function defaultSection(type) {
         { icon: 'fa-heart',  name: 'Servizio 2', desc: 'Descrizione del secondo servizio.' },
         { icon: 'fa-rocket', name: 'Servizio 3', desc: 'Descrizione del terzo servizio.' }
     ]};
-    if (type === 'gallery')  return { id: id, type: 'gallery',  title: 'I Nostri Lavori' };
+    if (type === 'gallery')  return { id: id, type: 'gallery',  title: 'I Nostri Lavori', images: [] };
     if (type === 'contact')  return { id: id, type: 'contact',  title: 'Contattaci', description: 'Siamo a tua disposizione per qualsiasi informazione', contact: { phone: '+39 123 456 7890', email: 'info@azienda.it', address: 'Via Roma 123, Milano' }, cta: 'RICHIEDI INFORMAZIONI', ctaLink: '' };
     if (type === 'social')   return { id: id, type: 'social' };
     return { id: id, type: type };
@@ -473,8 +473,23 @@ function buildEditorFields(sec) {
         return html;
     }
     if (sec.type === 'gallery') {
+        var imgs = sec.images || [];
+        var thumbs = imgs.map(function(url, i) {
+            return '<div style="position:relative;display:inline-block;margin:4px;">'
+                 + '<img src="' + esc(url) + '" style="width:80px;height:80px;object-fit:cover;border-radius:8px;border:2px solid #e2e8f0;">'
+                 + '<button onclick="removeGalleryImage(\'' + sec.id + '\',' + i + ')" style="position:absolute;top:-6px;right:-6px;background:#ef4444;color:white;border:none;border-radius:50%;width:20px;height:20px;cursor:pointer;font-size:11px;line-height:20px;padding:0;">✕</button>'
+                 + '</div>';
+        }).join('');
         return '<div class="control-group"><label>Titolo Sezione</label><input type="text" id="ef_title" value="' + esc(sec.title) + '" placeholder="I Nostri Lavori" oninput="liveEditSection()"></div>'
-             + '<p style="font-size:0.8rem;color:#94a3b8;margin-top:4px;">La galleria mostra un placeholder grafico.</p>';
+             + '<div class="control-group">'
+             + '<label>Immagini Galleria (' + imgs.length + ' foto)</label>'
+             + '<div id="gallery_thumbs_' + sec.id + '" style="margin-bottom:10px;min-height:20px;">' + (thumbs || '<p style="font-size:0.78rem;color:#94a3b8;">Nessuna immagine caricata</p>') + '</div>'
+             + '<label style="display:flex;align-items:center;justify-content:center;gap:10px;background:#667eea;color:white;padding:12px 20px;border-radius:12px;cursor:pointer;font-weight:600;font-size:0.9rem;" id="gallery_upload_label_' + sec.id + '">'
+             + '<i class="fas fa-cloud-upload-alt"></i> Carica Foto'
+             + '<input type="file" accept="image/*" multiple style="display:none;" onchange="uploadGalleryImages(event,\'' + sec.id + '\')">'
+             + '</label>'
+             + '<p id="gallery_upload_status_' + sec.id + '" style="font-size:0.78rem;color:#667eea;margin-top:6px;min-height:16px;"></p>'
+             + '</div>';
     }
     if (sec.type === 'contact') {
         var c = sec.contact || {};
@@ -549,6 +564,43 @@ function readEditorIntoSection(sec) {
     }
 }
 
+async function uploadGalleryImages(event, secId) {
+    var files = Array.from(event.target.files);
+    if (!files.length) return;
+    var sec = activeSections.find(function(s){ return s.id === secId; });
+    if (!sec) return;
+    if (!sec.images) sec.images = [];
+    var statusEl = document.getElementById('gallery_upload_status_' + secId);
+    var labelEl  = document.getElementById('gallery_upload_label_' + secId);
+    if (labelEl) { labelEl.style.opacity = '0.6'; labelEl.style.pointerEvents = 'none'; }
+    for (var i = 0; i < files.length; i++) {
+        var file = files[i];
+        if (statusEl) statusEl.textContent = 'Caricamento ' + (i+1) + '/' + files.length + '...';
+        try {
+            var formData = new FormData();
+            formData.append('file', file);
+            var response = await fetch('/api/upload-org', { method: 'POST', body: formData });
+            var data = await response.json();
+            if (data.url) {
+                sec.images.push(data.url);
+            }
+        } catch (err) { console.error('Upload error:', err); }
+    }
+    if (labelEl) { labelEl.style.opacity = ''; labelEl.style.pointerEvents = ''; }
+    if (statusEl) statusEl.textContent = sec.images.length + ' foto caricate ✓';
+    // Ricarica il pannello editor per mostrare i thumbnail aggiornati
+    document.getElementById('sectionEditorBody').innerHTML = buildEditorFields(sec);
+    updatePreview();
+}
+
+function removeGalleryImage(secId, idx) {
+    var sec = activeSections.find(function(s){ return s.id === secId; });
+    if (!sec || !sec.images) return;
+    sec.images.splice(idx, 1);
+    document.getElementById('sectionEditorBody').innerHTML = buildEditorFields(sec);
+    updatePreview();
+}
+
 var dragId = null;
 function onDragStart(e, id) { dragId = id; e.currentTarget.classList.add('dragging'); }
 function onDragOver(e, id) { e.preventDefault(); if (dragId !== id) { var el = document.getElementById('chip_' + id); if (el) el.classList.add('drag-over'); } }
@@ -610,8 +662,15 @@ function renderSectionHtml(sec) {
              + '</div>';
     }
     if (sec.type === 'gallery') {
+        var imgs = sec.images || [];
         var cells = '';
-        for (var i=0;i<6;i++) cells += '<div style="background:linear-gradient(135deg,#cbd5e1 0%,#94a3b8 100%);height:260px;border-radius:14px;"></div>';
+        if (imgs.length > 0) {
+            imgs.forEach(function(url) {
+                cells += '<div style="height:260px;border-radius:14px;overflow:hidden;"><img src="' + esc(url) + '" style="width:100%;height:100%;object-fit:cover;"></div>';
+            });
+        } else {
+            for (var i=0;i<6;i++) cells += '<div style="background:linear-gradient(135deg,#cbd5e1 0%,#94a3b8 100%);height:260px;border-radius:14px;display:flex;align-items:center;justify-content:center;"><i class="fas fa-image" style="font-size:2rem;color:white;opacity:0.5;"></i></div>';
+        }
         return '<div style="padding:70px 40px;background:white;">'
              + '<h2 style="font-size:2.2rem;color:#1e293b;margin-bottom:44px;text-align:center;">' + esc(sec.title) + '</h2>'
              + '<div style="display:grid;grid-template-columns:repeat(3,1fr);gap:18px;max-width:1100px;margin:0 auto;">' + cells + '</div>'
@@ -715,7 +774,10 @@ async function loadExistingLanding() {
                 });
             } else {
                 activeSections = pageData.sections;
-                activeSections.forEach(function(sec){ if (!sec.id) sec.id = uid(); });
+                activeSections.forEach(function(sec){
+                    if (!sec.id) sec.id = uid();
+                    if (sec.type === 'gallery' && !sec.images) sec.images = [];
+                });
             }
         }
         if (socialLinks.facebook)  document.getElementById('socialFacebook').value  = socialLinks.facebook;
