--- a/public/promotions.html
+++ b/public/promotions.html
@@ -372,7 +372,7 @@
                 <div class="cta-block">
                     <p class="cta-text">
                         Aiutaci a far crescere la piattaforma e ricevi compensi fino a 30€ 
-                        <a href="/public/lapiattaforma.html" class="cta-link">Clicca Qui</a> 
+                        <a href="#" class="cta-link" onclick="event.preventDefault(); if(window.CDM86Intro) CDM86Intro.show();">Clicca Qui</a> 
                         e scopri come fare
                     </p>
                 </div>
