Fix: public/lapiattaforma.html

--- a/public/lapiattaforma.html
+++ b/public/lapiattaforma.html
@@ -438,9 +438,9 @@
     <!-- CTA FINALE -->
     <section class="final-cta">
         <h2>Pronto a iniziare?</h2>
-        <p>Registrati gratis in 60 secondi e ricevi subito il tuo link referral personale.</p>
-        <a href="/public/promotions.html" class="final-btn" onclick="event.preventDefault(); window.location.href='/public/promotions.html'; setTimeout(function(){ if(window.showAuthModal) window.showAuthModal('register'); }, 500);">
-            <i class="fas fa-user-plus"></i> Registrati ora — è gratis
+        <p>Registrati in 60 secondi e ricevi subito il tuo link referral personale.</p>
+        <a href="/public/promotions.html" class="final-btn">
+            <i class="fas fa-user-plus"></i> Registrati ora
         </a>
     </section>
 
